--- a/package.json
+++ b/package.json
@@ -10,21 +10,32 @@
     "lint": "eslint \"src/**/*.{ts,tsx,js,jsx,json}\"",
     "lint:fix": "npm run lint -- --fix",
     "lint:eslint": "eslint \"src/**/*.{ts,tsx,js,jsx,json}\"",
-    "lint:eslint:fix": "npm run lint:eslint -- --fix"
+    "lint:eslint:fix": "npm run lint:eslint -- --fix",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
-    "@nabla/vite-plugin-eslint": "^2.0.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.1.2",
+    "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
+    "bootstrap": "^5.3.3",
+    "polished": "^4.3.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "react-ripple-click": "^1.3.0",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@nabla/vite-plugin-eslint": "^2.0.5",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -32,14 +43,16 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.15.0",
     "prettier": "^3.5.2",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
+    "typescript-eslint": "^8.25.0",
     "vite": "^6.2.0",
     "vite-plugin-checker": "^0.9.0",
     "vite-plugin-eslint": "^1.8.1",
