--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -23,9 +24,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^4.1.2",
     "@mui/material": "^6.4.6",
+    "@mui/x-date-pickers": "^7.27.3",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
